
@startuml
' App Suite - Architecture v5 (Basic, Conservative Syntax)

skinparam shadowing false
skinparam linetype ortho
skinparam DefaultFontName Monospace
skinparam ClassBorderColor #333333
skinparam ClassBackgroundColor #ffffff
skinparam PackageTitleFontSize 16
skinparam ClassFontSize 12

package "Core (Auth & Sharing)" {
  class User {
    +id : bigint
    +email : varchar
    +pwd_hash : varchar
    +name : varchar
    +plan : enum
    +created_at : datetime
    +updated_at : datetime
  }

  class Pair {
    +id : bigint
    +owner_id : bigint
    +name : varchar
    +created_at : datetime
    +updated_at : datetime
  }

  class PairMember {
    +pair_id : bigint
    +user_id : bigint
    +role : enum
    +joined_at : datetime
  }

  User "1" -- "0..*" Pair : owns
  Pair "1" -- "1..*" PairMember : has
}

package "PairList" {
  class List {
    +id : bigint
    +pair_id : bigint
    +name : varchar
    +is_archived : bool
    +created_at : datetime
    +updated_at : datetime
  }

  class Section {
    +id : bigint
    +list_id : bigint
    +name : varchar
    +icon : varchar
    +color : varchar
    +position : int
    +is_default : bool
    +created_at : datetime
    +updated_at : datetime
  }

  class ListItem {
    +id : bigint
    +list_id : bigint
    +section_id : bigint
    +title : varchar
    +notes : text
    +qty : decimal
    +unit : varchar
    +dept : varchar
    +is_pantry : bool
    +assigned_to : bigint
    +is_done : bool
    +position : int
    +due_at : datetime
    +mongo_ref : char(24)
    +created_at : datetime
    +updated_at : datetime
  }

  Pair "1" -- "0..*" List : has
  List "1" -- "0..*" Section : groups
  List "1" -- "0..*" ListItem : contains
  Section "1" -- "0..*" ListItem : categorizes
}

package "SnapEvent" {
  class Event {
    +id : bigint
    +owner_id : bigint
    +title : varchar
    +start_at : datetime
    +end_at : datetime
    +location : varchar
    +lat : decimal
    +lng : decimal
    +notes : text
    +ics_hash : char(32)
    +public_hash : char(12)
    +mongo_ref : char(24)
    +created_at : datetime
    +updated_at : datetime
  }

  class EventGuest {
    +event_id : bigint
    +guest : varchar
    +status : enum
  }

  User "1" -- "0..*" Event : owns
  Event "1" -- "0..*" EventGuest : invites
}

package "AutoWarrantyCard" {
  class Asset {
    +id : bigint
    +owner_id : bigint
    +name : varchar
    +category : varchar
    +brand : varchar
    +model : varchar
    +serial : varchar
    +purchase_date : date
    +price : decimal
    +notes : text
    +mongo_ref : char(24)
    +created_at : datetime
    +updated_at : datetime
  }

  class Receipt {
    +id : bigint
    +item_id : bigint
    +file_url : varchar
    +vendor : varchar
    +doc_date : date
    +doc_number : varchar
    +tax_id : varchar
    +mongo_ref : char(24)
    +created_at : datetime
  }

  class Warranty {
    +id : bigint
    +item_id : bigint
    +start_date : date
    +end_date : date
    +terms : text
    +vendor_contact : varchar
  }

  class Reminder {
    +id : bigint
    +related_type : enum
    +related_id : bigint
    +due_at : datetime
    +status : enum
  }

  Asset "1" -- "0..*" Receipt : has
  Asset "1" -- "0..1" Warranty : covered by
}

package "CardKeeper" {
  class LoyaltyCard {
    +id : bigint
    +owner_id : bigint
    +store_name : varchar
    +barcode_format : enum
    +code_value : varchar
    +color : varchar
    +notes : varchar
    +created_at : datetime
  }

  class Store {
    +id : bigint
    +name : varchar
    +brand : varchar
    +address : varchar
    +lat : decimal
    +lng : decimal
    +created_at : datetime
  }
}

@enduml
